[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/bg-1.png" type="Texture" id=1]
[ext_resource path="res://World/bg-3.png" type="Texture" id=2]
[ext_resource path="res://World/bg-2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/City.gd" type="Script" id=4]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.0533, 2.06339 )

[node name="City" type="Node2D"]
script = ExtResource( 4 )

[node name="Bg-1" type="Sprite" parent="."]
position = Vector2( 26.6968, 1.04308e-06 )
scale = Vector2( 1.13905, 1 )
texture = ExtResource( 1 )

[node name="Bg-2" type="Sprite" parent="."]
position = Vector2( 27.3642, 0.667419 )
scale = Vector2( 1.14252, 1.00596 )
texture = ExtResource( 3 )

[node name="Bg-3" type="Sprite" parent="Bg-2"]
position = Vector2( -612, 0 )
texture = ExtResource( 2 )

[node name="TopArea2D" type="Area2D" parent="."]
position = Vector2( 26.6968, 1.04308e-06 )
scale = Vector2( 1.13905, 1 )

[node name="Top" type="CollisionShape2D" parent="TopArea2D"]
position = Vector2( -152.931, -110.124 )
shape = SubResource( 1 )

[node name="BottomArea2D" type="Area2D" parent="."]
position = Vector2( 26.6968, 1.04308e-06 )
scale = Vector2( 1.13905, 1 )

[node name="Bottom" type="CollisionShape2D" parent="BottomArea2D"]
position = Vector2( -150.587, 111.459 )
shape = SubResource( 1 )
[connection signal="area_entered" from="TopArea2D" to="." method="_on_TopArea2D_area_entered"]
[connection signal="area_exited" from="TopArea2D" to="." method="_on_TopArea2D_area_exited"]
[connection signal="area_entered" from="BottomArea2D" to="." method="_on_BottomArea2D_area_entered"]
[connection signal="area_exited" from="BottomArea2D" to="." method="_on_BottomArea2D_area_exited"]
